2007-05-10  Paolo Carlini  <pcarlini@suse.de>
	* 27_io/objects/wchar_t/11.cc: Include <cstring>.
	* 27_io/objects/wchar_t/10.cc: Likewise.
	* 27_io/objects/wchar_t/12.cc: Likewise.
	* 27_io/basic_streambuf/sputbackc/char/9538.cc: Likewise.
	* 27_io/basic_streambuf/sgetn/char/1.cc: Likewise.
	* 27_io/basic_streambuf/overflow/char/1.cc: Likewise.
	* 27_io/basic_streambuf/sgetc/char/1.cc: Likewise.
	* 27_io/basic_streambuf/sputn/wchar_t/1.cc: Likewise.
	* 27_io/basic_streambuf/sputn/char/1.cc: Likewise.
	* 27_io/basic_ios/cons/char/3.cc: Likewise.
	* 27_io/basic_stringbuf/setbuf/char/2.cc: Likewise.
	* 27_io/basic_stringbuf/setbuf/char/3.cc: Likewise.
	* 27_io/basic_stringbuf/setbuf/char/4.cc: Likewise.
	* 27_io/basic_istream/extractors_character/char/4.cc: Likewise.
	* 27_io/fpos/mbstate_t/1.cc: Likewise.
	* 27_io/basic_filebuf/setbuf/char/2.cc: Likewise.
	* 27_io/basic_filebuf/setbuf/char/3.cc: Likewise.
	* 25_algorithms/copy/streambuf_iterators/char/2.cc: Likewise.
	* 25_algorithms/copy/streambuf_iterators/char/4.cc: Likewise.
	* 19_diagnostics/stdexceptions.cc: Likewise.
	* 21_strings/char_traits/requirements/short/1.cc: Likewise.
	* 21_strings/basic_string/compare/char/1.cc: Likewise.
	* 21_strings/basic_string/capacity/1.cc: Likewise.
	* ext/codecvt/char-1.cc: Likewise.
	* ext/codecvt/char-2.cc: Likewise.
	* ext/codecvt/1.cc: Likewise.
	* ext/stdio_sync_filebuf/wchar_t/1.cc: Likewise.
	* ext/stdio_sync_filebuf/char/1.cc: Likewise.
	* ext/stdio_filebuf/char/2.cc: Likewise.
	* ext/stdio_filebuf/char/10063-1.cc: Likewise.
	* 22_locale/ctype/narrow/char/19955.cc: Likewise.
	* 22_locale/codecvt/unshift/wchar_t/1.cc: Likewise.
	* 22_locale/codecvt/unshift/wchar_t/2.cc: Likewise.
	* 22_locale/codecvt/unshift/wchar_t/3.cc: Likewise.
	* 22_locale/codecvt/unshift/wchar_t/4.cc: Likewise.
	* 22_locale/codecvt/unshift/char/1.cc: Likewise.
	* 22_locale/codecvt/length/wchar_t/1.cc: Likewise.
	* 22_locale/codecvt/length/wchar_t/2.cc: Likewise.
	* 22_locale/codecvt/length/wchar_t

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,72 @@
+2007-05-10  Paolo Carlini  <pcarlini@suse.de>
+
+	* 27_io/objects/wchar_t/11.cc: Include <cstring>.
+	* 27_io/objects/wchar_t/10.cc: Likewise.
+	* 27_io/objects/wchar_t/12.cc: Likewise.
+	* 27_io/basic_streambuf/sputbackc/char/9538.cc: Likewise.
+	* 27_io/basic_streambuf/sgetn/char/1.cc: Likewise.
+	* 27_io/basic_streambuf/overflow/char/1.cc: Likewise.
+	* 27_io/basic_streambuf/sgetc/char/1.cc: Likewise.
+	* 27_io/basic_streambuf/sputn/wchar_t/1.cc: Likewise.
+	* 27_io/basic_streambuf/sputn/char/1.cc: Likewise.
+	* 27_io/basic_ios/cons/char/3.cc: Likewise.
+	* 27_io/basic_stringbuf/setbuf/char/2.cc: Likewise.
+	* 27_io/basic_stringbuf/setbuf/char/3.cc: Likewise.
+	* 27_io/basic_stringbuf/setbuf/char/4.cc: Likewise.
+	* 27_io/basic_istream/extractors_character/char/4.cc: Likewise.
+	* 27_io/fpos/mbstate_t/1.cc: Likewise.
+	* 27_io/basic_filebuf/setbuf/char/2.cc: Likewise.
+	* 27_io/basic_filebuf/setbuf/char/3.cc: Likewise.
+	* 25_algorithms/copy/streambuf_iterators/char/2.cc: Likewise.
+	* 25_algorithms/copy/streambuf_iterators/char/4.cc: Likewise.
+	* 19_diagnostics/stdexceptions.cc: Likewise.
+	* 21_strings/char_traits/requirements/short/1.cc: Likewise.
+	* 21_strings/basic_string/compare/char/1.cc: Likewise.
+	* 21_strings/basic_string/capacity/1.cc: Likewise.
+	* ext/codecvt/char-1.cc: Likewise.
+	* ext/codecvt/char-2.cc: Likewise.
+	* ext/codecvt/1.cc: Likewise.
+	* ext/stdio_sync_filebuf/wchar_t/1.cc: Likewise.
+	* ext/stdio_sync_filebuf/char/1.cc: Likewise.
+	* ext/stdio_filebuf/char/2.cc: Likewise.
+	* ext/stdio_filebuf/char/10063-1.cc: Likewise.
+	* 22_locale/ctype/narrow/char/19955.cc: Likewise.
+	* 22_locale/codecvt/unshift/wchar_t/1.cc: Likewise.
+	* 22_locale/codecvt/unshift/wchar_t/2.cc: Likewise.
+	* 22_locale/codecvt/unshift/wchar_t/3.cc: Likewise.
+	* 22_locale/codecvt/unshift/wchar_t/4.cc: Likewise.
+	* 22_locale/codecvt/unshift/char/1.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/1.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/2.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/3.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/4.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/5.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/6.cc: Likewise.
+	* 22_locale/codecvt/length/wchar_t/7.cc: Likewise.
+	* 22_locale/codecvt/always_noconv/char/1.cc: Likewise.
+	* 22_locale/codecvt/encoding/char/1.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/1.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/2.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/3.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/4.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/5.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/6.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/7.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/8.cc: Likewise.
+	* 22_locale/codecvt/in/wchar_t/9.cc: Likewise.
+	* 22_locale/codecvt/in/char/1.cc: Likewise.
+	* 22_locale/codecvt/max_length/char/1.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/1.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/2.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/3.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/4.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/5.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/6.cc: Likewise.
+	* 22_locale/codecvt/out/wchar_t/7.cc: Likewise.
+	* 22_locale/codecvt/out/char/1.cc: Likewise.
+	* 22_locale/locale/cons/5.cc: Likewise.
+	* 22_locale/collate_byname/named_equivalence.cc: Likewise.
+
 2007-05-07  Mark Mitchell  <mark@codesourcery.com>
 
 	* libstdc++-v3/libsupc++/cxxabi.h (_GLIBCXX_NOTHROW): New macro.
