--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/debug/dwarf2/inline3.c: New test.
+
 2009-10-05  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/41479
