--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2009-09-09  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/41317
+	* gcc.c-torture/execute/pr41317.c: New testcase.
+
 2009-10-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/debug/dwarf2/inline3.c: New test.
