--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-07  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/variadic95.C: New.
+
+	* g++.dg/template/scope3.C: New.
+
+	* g++.dg/cpp0x/defaulted13.C: New.
+
 2009-09-09  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/41317
