--- a/gcc-4_4-branch/gcc/ChangeLog
+++ b/gcc-4_4-branch/gcc/ChangeLog
@@ -1,3 +1,20 @@
+2009-10-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/41543
+	* input.h (BUILTINS_LOCATION): Change to 1 from 2.
+	Assert BUILTINS_LOCATION < RESERVED_LOCATION_COUNT.
+	* tree.c: Include intl.h.
+	(expand_location): Handle BUILTINS_LOCATION.
+	* Makefile.in (tree.o): Depend on intl.h.
+
+	PR debug/41695
+	* dwarf2out.c (dwarf2out_var_location): Always clear
+	last_postcall_label when changing last_label.
+
+2009-10-13  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* dwarf2out.c (mem_loc_descriptor): Accept UNGT as well.
+
 2009-10-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR preprocessor/41445
