--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/41543
+	* gcc.dg/debug/dwarf2/pr41543.c: New test.
+
+	PR debug/41695
+	* gcc.dg/debug/dwarf2/pr41695.c: New test.
+
 2009-10-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR preprocessor/41445
