--- a/gcc-4_4-branch/libcpp/ChangeLog
+++ b/gcc-4_4-branch/libcpp/ChangeLog
@@ -1,3 +1,10 @@
+2009-10-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/41543
+	* include/line-map.h (RESERVED_LOCATION_COUNT): Define.
+	* line-map.c (linemap_init): Initialize highest_location and
+	highest_line to RESERVED_LOCATION_COUNT-1 instead of 0.
+
 2009-09-02  Ian Lance Taylor  <iant@google.com>
 
 	* macro.c (stringify_arg): Escape CPP_WCHAR tokens.
