--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -6,6 +6,26 @@
 	PR debug/41695
 	* gcc.dg/debug/dwarf2/pr41695.c: New test.
 
+2009-10-14  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.dg/guality/pr41616-1.c: Drop -O2.
+	* gcc.dg/guality/pr41447-1.c: Likewise.  Name main.
+
+2009-10-12  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/41343
+	PR debug/41447
+	PR debug/41264
+	PR debug/41338
+	* gcc.dg/guality/pr41447-1.c: New.
+	* gcc.dg/debug/pr41264-1.c: New.
+	* gcc.dg/debug/pr41343-1.c: New.
+
+2009-10-12  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/41616
+	* gcc.dg/guality/pr41616-1.c: New.
+
 2009-10-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR preprocessor/41445
