--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/debug/vta-2.c: New test.
+
+2009-09-30  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.dg/debug/vta-1.c: New.
+
 2009-10-14  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR target/38948
