svn merge -r152771:152772 svn+ssh://gcc.gnu.org/svn/gcc/trunk
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@152774 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_4-branch/gcc/ChangeLog
+++ b/gcc-4_4-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* tree-parloops.c (separate_decls_in_region_debug_bind): Drop debug
+	stmts setting DEBUG_EXPR_DECLs.
+
+	* cfgexpand.c (expand_debug_expr): Ignore zero-length bitfields.
+	Don't crash if mode1 is VOIDmode.
+
 2009-10-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* tree-ssa-operands.c (pop_stmt_changes): In DEBUG stmts, if
