svn merge -r152798:152799 svn+ssh://gcc.gnu.org/svn/gcc/trunk svn merge -r152779:152780 svn+ssh://gcc.gnu.org/svn/gcc/trunk
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@152858 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_4-branch/gcc/ChangeLog
+++ b/gcc-4_4-branch/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2009-10-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/rs6000/option-defaults.h (OPTION_DEFAULT_SPECS): Don't
+	add --with-tune{,-32,-64} configured default for -mtune if explicit
+	-mcpu is used.
+
+2009-10-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* stor-layout.c (place_field): Don't emit -Wpadded warnings for
+	fields in builtin structs.
+	(finalize_record_size): Likewise.
+
 2009-04-28  Joseph Myers  <joseph@codesourcery.com>
 
 	* config.gcc (powerpc*-*-* | rs6000-*-*): Add
