--- a/gcc-4_4-branch/ChangeLog
+++ b/gcc-4_4-branch/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-15  Release Manager
+
+	* GCC 4.4.2 released.
+
 2009-09-04  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.ac (with-build-config): Document.  Handle without.
