--- a/gcc-4_4-branch/boehm-gc/ChangeLog
+++ b/gcc-4_4-branch/boehm-gc/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-15  Release Manager
+
+	* GCC 4.4.2 released.
+
 2009-07-17  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR boehm-gc/40785
