--- a/gcc-4_4-branch/contrib/ChangeLog
+++ b/gcc-4_4-branch/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-15  Release Manager
+
+	* GCC 4.4.2 released.
+
 2009-09-10  Iain Sandoe  <iain.sandoe@sandoe-acoustics.co.uk>
 
 	PR bootstrap/41245
