--- a/gcc-4_4-branch/gcc/java/ChangeLog
+++ b/gcc-4_4-branch/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-15  Release Manager
+
+	* GCC 4.4.2 released.
+
 2009-09-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* boehm.c (mark_reference_fields): Compute % in HOST_WIDE_INT
