--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-15  Release Manager
+
+	* GCC 4.4.2 released.
+
 2009-10-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* obj-c++.dg/layout-1.mm: Don't xfail dg-bogus on lp64, change
