--- a/gcc-4_4-branch/gcc/ChangeLog
+++ b/gcc-4_4-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* cfgexpand.c (expand_debug_expr): Fail if bitpos < 0 for non-MEM
+	op0.
+
 2009-10-17  Alexandre Oliva  <aoliva@redhat.com>
 
 	* print-rtl.c (print_rtx): Print locators in asm_operands
