--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/debug/vta-3.c: New test.
+
 2009-10-15  Jason Merrill  <jason@redhat.com>
 
 	PR c++/38798
