--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2009-10-15  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/23983
+	* gcc.target/powerpc/altivec-4.c (b): Make sure altivec builtin
+	result used.
+	* g++.dg/ext/altivec-2.C (main): Ditto.
+
 2009-10-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/cleanup-13.c: New test.
