--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,23 @@
+2009-10-21  H.J. Lu  <hongjiu.lu@intel.com>
+
+	2009-10-16  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/41728
+	* gcc.c-torture/compile/pr41728.c: New testcase.
+
+	2009-10-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/41717
+	* gcc.dg/debug/pr41717.c: New test.
+
+2009-10-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/abi/mangle33.C: New test.
+
+2009-10-20  Joseph Myers  <joseph@codesourcery.com>
+
+	* gcc.target/arm/neon-thumb2-move.c: New test.
+
 2009-10-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/raw-string-1.c: New test.
@@ -36,12 +56,9 @@
 	* gcc.dg/cleanup-13.c: New test.
 
 2009-10-19  Tobias Burnus  <burnus@net-b.de>
-	    Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/41755
-	* symbol.c (gfc_undo_symbols): Add NULL check.
-	* match.c (gfc_match_equivalence): Add check for
-	missing comma.
+	* gfortran.dg/equiv_8.f90: New test.
 
 2009-10-19  Jakub Jelinek  <jakub@redhat.com>
 
