--- a/gcc-4_4-branch/gcc/ChangeLog
+++ b/gcc-4_4-branch/gcc/ChangeLog
@@ -1,5 +1,26 @@
 2009-10-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR other/25507
+	* doc/invoke.texi: Document -print-multi-os-directory.
+
+2009-10-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/rs6000/rs6000.c (def_builtin): Set TREE_READONLY instead
+	of TREE_CONSTANT.
+
+2009-10-20  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/41739
+	* haifa-sched.c (try_ready): Skip debug deps updating speculation
+	status.
+
+2009-10-20  Alexandre Oliva  <aoliva@redhat.com>
+
+	* tree-ssa-dce.c (eliminate_unnecessary_stmts): Don't regard
+	the removal of a debug stmt as a significant change.
+
+2009-10-21  Jakub Jelinek  <jakub@redhat.com>
+
 	Backport from mainline:
 	2009-06-13  Joerg Sonnenberger  <joerg@britannica.bec.de>
 
