--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,18 @@
+2009-10-27  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/41842
+	* gcc.dg/pr41842.c: New test.
+
+2009-10-23  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/40808
+	* g++.dg/abi/mangle33.C: New test
+
+2009-10-23  Mikael Pettersson  <mikpe@it.uu.se>
+
+	* gcc.c-torture/compile/pr11832.c: Delete.
+	* gcc.c-torture/compile/pr33009.c: Likewise.
+
 2009-10-21  H.J. Lu  <hongjiu.lu@intel.com>
 
 	2009-10-16  Richard Guenther  <rguenther@suse.de>
