--- a/gcc-4_4-branch/gcc/ChangeLog
+++ b/gcc-4_4-branch/gcc/ChangeLog
@@ -12,6 +12,17 @@
 
         * config/i386/cygming.h (DWARF_FRAME_REGNUM): Add enclosing parens.
 
+2009-10-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/41345
+	* cfgcleanup.c (trivially_empty_bb_p): New function.
+	(try_optimize_bb): Use it instead of checking BB_HEAD == BB_END.
+
+	PR debug/41828
+	* dwarf2out.c (add_pubname, add_pubtype, generic_parameter_die,
+	add_name_and_src_coords_attributes, gen_namespace_die,
+	dwarf2out_set_name): Handle dwarf2_name returning NULL.
+
 2009-10-23  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	Backport from mainline:
