--- a/gcc-4_4-branch/gcc/cp/ChangeLog
+++ b/gcc-4_4-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2009-10-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/41828
+	* cp-lang.c (cxx_dwarf_name): Return NULL instead of
+	<anonymous ...> for anonymous aggregate names.
+
 2009-10-23  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/40808
