--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -3,6 +3,14 @@
 	PR c/41842
 	* gcc.dg/pr41842.c: New test.
 
+2009-10-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/41345
+	* gcc.dg/pr41345.c: New test.
+
+	PR debug/41828
+	* g++.dg/debug/dwarf2/anonname1.C: New test.
+
 2009-10-23  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/40808
