--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -21,6 +21,11 @@
 	* gcc.c-torture/compile/pr11832.c: Delete.
 	* gcc.c-torture/compile/pr33009.c: Likewise.
 
+2009-10-22  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/41787
+	* gcc.target/powerpc/vsx-vrsave.c: New file.
+
 2009-10-21  H.J. Lu  <hongjiu.lu@intel.com>
 
 	2009-10-16  Richard Guenther  <rguenther@suse.de>
