svn merge -r153788:153789 svn+ssh://gcc.gnu.org/svn/gcc/trunk svn merge -r153767:153768 svn+ssh://gcc.gnu.org/svn/gcc/trunk
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@153811 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_4-branch/gcc/cp/ChangeLog
+++ b/gcc-4_4-branch/gcc/cp/ChangeLog
@@ -4,6 +4,22 @@
 	* call.c (compare_ics): Avoid bad union use when
 	comparing two ck_lists.
 
+2009-10-31  Jason Merrill  <jason@redhat.com>
+
+	* rtti.c (tinfo_name): Fix lengths for private case.
+
+2009-10-30  Jerry Quinn  <jlquinn@optonline.net>
+
+	* mangle.c (mangle_type_string_for_rtti): Revert r149964.
+	(needs_fake_anon): Likewise.
+	(write_name): Likewise.
+	(write_nested_name): Likewise.
+	* cp-tree.h (mangle_type_string_for_rtti): Likewise.
+	(get_anonymous_namespace): Likewise.
+	* name-lookup.c (get_anonymous_namespace_name): Likewise.
+	* rtti.c (tinfo_name): Insert '*' in front of private names.
+	(tinfo_base_init): Use it.
+
 2009-10-26  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/41828
