--- a/gcc-4_4-branch/libstdc++-v3/ChangeLog
+++ b/gcc-4_4-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2009-10-30  Jerry Quinn  <jlquinn@optonline.net>
+
+	* libsupc++/tinfo.cc (operator=(const type_info&)): Compare by
+	pointer if name begins with '*'.
+	* libsupc++/typeinfo (type_info::name()): Likewise.
+	* libsupc++/tinfo2.cc (before):  Likewise.
+
 2009-10-28  Johannes Singler  <singler@kit.edu>
 
         PR libstdc++/40852
