--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -5,6 +5,8 @@
 
 2009-10-31  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/rtti/typeid9.C: New.
+
 	PR c++/41754
 	* g++.dg/cpp0x/initlist25.C: New.
 
