svn merge -r153789:153790 svn+ssh://gcc.gnu.org/svn/gcc/trunk svn merge -r153038:153039 svn+ssh://gcc.gnu.org/svn/gcc/trunk
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@153813 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_4-branch/gcc/cp/ChangeLog
+++ b/gcc-4_4-branch/gcc/cp/ChangeLog
@@ -11,6 +11,12 @@
 
 2009-10-31  Jason Merrill  <jason@redhat.com>
 
+	* tree.c (cv_unqualified): New fn.
+	* cp-tree.h: Declare it.
+	* typeck.c (decay_conversion): Use it instead of TYPE_MAIN_VARIANT.
+
+2009-10-31  Jason Merrill  <jason@redhat.com>
+
 	PR c++/41754
 	* call.c (compare_ics): Avoid bad union use when
 	comparing two ck_lists.
