--- a/gcc-4_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_4-branch/gcc/testsuite/ChangeLog
@@ -12,6 +12,10 @@
 	PR fortran/41850
 	* gfortran.dg/intent_out_6.f90: New testcase.
 
+2009-10-31  Richard Guenther  <rguenther@suse.de>
+
+	* g++.dg/tree-ssa/restrict1.C: New.
+
 2009-10-31  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/rtti/typeid9.C: New.
