--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-02  Jason Merrill  <jason@redhat.com>
+
+	* c-parse.in (structsp_attr): Fix for bison 2.4.1 pedantry.
+
 2006-04-25  Nick Clifton  <nickc@redhat.com>
 
 	* config/m32r/m32r.c (gen_compare): Fix reg/smallconst equal code,
