2010-05-17  Paolo Carlini  <paolo.carlini@oracle.com>
	* include/std/functional (result_of): Move...
	* include/std/type_traits: ... here.
	* testsuite/20_util/declval/requirements/1_neg.cc: Adjust dg-error
	line number.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@159478 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-05-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/std/functional (result_of): Move...
+	* include/std/type_traits: ... here.
+	* testsuite/20_util/declval/requirements/1_neg.cc: Adjust dg-error
+	line number.
+
 2010-05-12  Jason Merrill  <jason@redhat.com>
 
 	* testsuite/20_util/auto_ptr/assign_neg.cc: Expect template
