--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-19  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	* testsuite/30_threads/future/members/wait.cc (wait): Rename.
+	* testsuite/30_threads/shared_future/members/wait.cc (wait): Likewise.
+
 2010-05-18  Eelis van der Weegen  <gcc-bugzilla@contacts.eelis.net>
 
 	PR libstdc++/44190
