--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-05-20  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/bits/stl_pair.h (pair<>::pair(const pair&)): Defaulted
+	in C++0x mode.
+	(pair<>::operator=(const pair<>&)): Add in C++0x mode.
+	* testsuite/20_util/weak_ptr/comparison/cmp_neg.cc: Adjust dg-error
+	line number.
+
 2010-05-19  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* testsuite/30_threads/future/members/wait.cc (wait): Rename.
