2010-05-21  Paolo Carlini  <paolo.carlini@oracle.com>
	* include/tr1/functional: Use std::__addressof.
	* include/tr1/hashtable_policy.h: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@159661 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-21  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/tr1/functional: Use std::__addressof.
+	* include/tr1/hashtable_policy.h: Likewise.
+
 2010-05-20  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR libstdc++/41792
