Allow compilation with GCC 4.4. include/ 	* obstack.h: Update to GCC 3.3 version. gcc/ 	* system.h: Don't poison malloc. gcc/cp/ 	* decl.c (current_binding_level): Add *&. 	* parse.y (constructor_declarator): Fix for bison pedantry.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-branch@159937 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-27  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (current_binding_level): Add *&.
+	* parse.y (constructor_declarator): Fix for bison pedantry.
+
 2003-04-22  Release Manager
 
 	* GCC 3.2.3 Released.
