--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-27  Jason Merrill  <jason@redhat.com>
+
+	* system.h: Don't poison malloc.
+
 2003-05-06  Richard Henderson  <rth@redhat.com>
 
         * unwind-dw2.c (uw_update_context_1): Only set cfa as sp if 
