--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-05-27  Jason Merrill  <jason@redhat.com>
+
+	Revert:
+	PR libstdc++/42832
+	* include/std/functional (function<>::swap): Perform bytewise
+	swap of _M_functor.
+	* include/tr1/functional (function<>::swap): Likewise.
+
 2010-05-27  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR libstdc++/40497
