Allow compilation with GCC 4.4. include/ 	* obstack.h: Update to GCC 3.3 version. gcc/cp/ 	* decl.c (current_binding_level): Add *&. 	* parse.y (constructor_declarator): Fix for bison pedantry. 	(nomods_initdcl0): Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_0-branch@159946 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-27  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (current_binding_level): Add *&.
+	* parse.y (constructor_declarator): Fix for bison pedantry.
+	(nomods_initdcl0): Likewise.
+
 2002-06-19  Akim Demaille  <akim@epita.fr>
 
 	* parse.y (TYPENAME): Rename as tTYPENAME to avoid the clash with
