--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2010-05-28  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/bits/stl_vector.h (vector<>::data): Fix return type
+	in c++0x mode.
+	* testsuite/23_containers/vector/requirements/dr438/
+	assign_neg.cc: Adjust dg-error line number.
+	* testsuite/23_containers/vector/requirements/dr438/insert_neg.cc:
+	Likewise.
+	* testsuite/23_containers/vector/requirements/dr438/
+	constructor_1_neg.cc: Likewise.
+	* testsuite/23_containers/vector/requirements/dr438/
+	constructor_2_neg.cc: Likewise.
+
 2010-05-27  Jason Merrill  <jason@redhat.com>
 
 	Revert:
