* testsuite/util/testsuite_abi.h: Work around glibc BZ 9694.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@160313 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-04  Jason Merrill  <jason@redhat.com>
+
+	* testsuite/util/testsuite_abi.h: Work around glibc BZ 9694.
+
 2010-06-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* testsuite/util/testsuite_iterators.h: Don't include <cstddef>,
