--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-06-05  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
+	* include/bits/shared_ptr_base.h (_Sp_counted_ptr::_M_dispose): Make
+	nullptr_t specializations inline.
+
+2010-06-05  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
 	* doc/xml/manual/status_cxx200x.xml: Update.
 
 2010-06-05  Magnus Fromreide  <magfr@lysator.liu.se>
