--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-09  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/44413
+	* include/ext/vstring_util.h (__vstring_utility<>::_S_compare):
+	Simplify, just return -1, 0, 1.
+
 2010-06-08  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/std/type_traits (has_nothrow_assign): Rename to
