--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-09  Iain Sandoe  <iains@gcc.gnu.org>
+
+	PR bootstrap/43170
+	* configure: Regenerate.
+
 2010-06-09  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR libstdc++/44413
